# calib-tools

./: .gitignore  CMakeLists.txt  readme.md
apps/: calib_cameras_main.cpp  calib_ground_main.cpp  calib_intrin_main.cpp  extract_image_main.cpp  get_poses_main.cpp  pano_calib_main.cpp  vis_cam_main.cpp  vis_ground_main.cpp
assets/360video/: camera_0_intrin.yaml  camera_2_intrin.yaml
assets/front/: camera_0_intrin_undistort.yaml  camera_1_intrin_undistort.yaml  camera_2_intrin_undistort.yaml
assets/front_calib/: camera_extrin_5_and_8.yaml  camera_extrin_5_and_9.yaml  ground.yaml
assets/front_calib/camera_calib/poses/: 5-0.png.yaml  5-1.png.yaml  5-10.png.yaml  5-100.png.yaml  5-104.png.yaml  5-105.png.yaml  5-106.png.yaml  5-112.png.yaml  5-113.png.yaml  5-128.png.yaml  5-129.png.yaml  5-16.png.yaml  5-2.png.yaml  5-21.png.yaml  5-29.png.yaml  5-3.png.yaml  5-4.png.yaml  5-40.png.yaml  5-48.png.yaml  5-5.png.yaml  5-53.png.yaml  5-58.png.yaml  5-59.png.yaml  5-6.png.yaml  5-60.png.yaml  5-61.png.yaml  5-62.png.yaml  5-63.png.yaml  5-65.png.yaml  5-66.png.yaml  5-71.png.yaml  5-73.png.yaml  5-77.png.yaml  5-8.png.yaml  5-9.png.yaml  5-92.png.yaml  5-93.png.yaml  5-96.png.yaml  5-97.png.yaml  8-0.png.yaml  (+114 more)
assets/pano_calib/: camera_0_homography.yaml  camera_0_intrin_undistort.yaml  camera_1_homography.yaml  camera_2_homography.yaml  camera_2_intrin_undistort.yaml  camera_3_homography.yaml  camera_3_intrin.yaml  camera_3_intrin_undistort.yaml  camera_4_homography.yaml  camera_4_intrin.yaml  camera_4_intrin_undistort.yaml  camera_5_homography.yaml  camera_5_intrin.yaml  camera_5_intrin_undistort.yaml
include/core/: camera_calib.h  pano_calib.h  viz_painter.h
include/stage/: april_tag.h  extract_image.h  tag_poses_set.h  undistorter.h
include/utils/: utils.h
src/core/: camera_calib.cpp  pano_calib.cpp  viz_painter.cpp
src/stage/: april_tag.cpp  extract_image.cpp  tag_poses_set.cpp  undistorter.cpp
src/utils/: utils.cpp
